fixed height on iphone mediaQ

--- a/src/css/partials/_breathing.scss
+++ b/src/css/partials/_breathing.scss
@@ -149,7 +149,7 @@
 
 @media screen and (max-height: 568px) {
   .cat {
-    top: 6px;
+    top: 30px;
   }
 }
 
